fixed issue with image view appearing behind navbar.

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,7 @@
 	--sidebar-accent-foreground: oklch(0.205 0 0);
 	--sidebar-border: oklch(0.922 0 0);
 	--sidebar-ring: oklch(0.708 0 0);
+	--photo-view-z-index: 999999; /* override default */
 }
 
 .dark {
@@ -110,6 +111,14 @@
 	--sidebar-accent-foreground: oklch(0.985 0 0);
 	--sidebar-border: oklch(1 0 0 / 10%);
 	--sidebar-ring: oklch(0.556 0 0);
+}
+
+.rv-photo-view__overlay {
+	z-index: var(--photo-view-z-index) !important;
+}
+
+.rv-photo-view__portal {
+	z-index: var(--photo-view-z-index) !important;
 }
 
 @layer base {
